whitespaces don't wrap, changed width for pc and made buttons smaller for mobile, changed body and html height to 100% this fixed height = 100% in the object and embed elements

--- a/style.css
+++ b/style.css
@@ -12,10 +12,18 @@ h1 {
     text-align: center;
 }
 
+body {
+    height: 100%
+}
+
+html {
+    height: 100%;
+}
+
 .block {
     display: block;
     margin: 0 auto;
-    width: 40%;
+    width: 30%;
     border: none;
     background-color: #04AA6D;
     padding: 14px 28px;
@@ -27,6 +35,13 @@ h1 {
     color: #1a1919;
     transition: all .2s ease-in-out;
     user-select: none;
+    white-space: nowrap;
+}
+
+@media (max-width: 1000px) {
+    .block {
+        width: 60%;
+    }
 }
 
 .block:hover:not(.homepage:disabled) {
